--- a/src/components/mdx/markdown.module.css
+++ b/src/components/mdx/markdown.module.css
@@ -36,8 +36,8 @@
     @apply text-sm;
   }
 
-  div.heading {
-    @apply text-xs;
+  div.anchor {
+    @apply hidden;
   }
 
   hr {
@@ -116,7 +116,7 @@
     summary {
       @apply cursor-pointer;
 
-      h2, h3, h4, h5, h6, .heading, p {
+      h2, h3, h4, h5, h6, p {
         @apply inline border-b-0 mb-0 pb-0;
       }
     }
@@ -213,7 +213,7 @@
     }
   }
 
-  h2, h3, h4, h5, h6, div.heading, p {
+  h2, h3, h4, h5, h6, p {
     a:not(:has(abbr)) {
       /* hyperlink */
       @apply text-blue-600 dark:text-blue-400 hover:underline;
@@ -391,6 +391,10 @@
         @apply bg-stone-100 outline-stone-700/30 text-stone-800;
       }
     }
+
+    span.spoiler {
+      @apply opacity-0 hover:opacity-100;
+    }
   }
 
   pre {
@@ -409,7 +413,7 @@
     }
   }
 
-  h2, h3, h4, h5, h6, div.heading, details, pre, p {
+  h2, h3, h4, h5, h6, details, pre, p {
     & + & {
       @apply mt-4;
     }
