--- a/src/app/(blog)/blog/article/article.module.css
+++ b/src/app/(blog)/blog/article/article.module.css
@@ -5,15 +5,8 @@
 .main {
   @apply w-full max-w-6xl /* max-w-7xl */ mx-auto p-4;
 
-  .frontmatter {
-    @apply pb-4;
-
-    time {
-      @apply text-sm text-zinc-700;
-    }
+  article {
   }
-
-  .article {}
 }
 
 .footer {
