--- a/src/components/mdx/index.module.css
+++ b/src/components/mdx/index.module.css
@@ -30,8 +30,6 @@
 
       /* Headings */
       hgroup {
-        @apply block-component;
-
         h2 {
           @apply text-markdown pb-1.5 mt-5.5 mb-6 text-2xl font-medium heading-border;
         }
@@ -47,17 +45,10 @@
         h5 {
           @apply text-markdown pb-0 mt-4 mb-0.5 text-base font-medium;
         }
-
-        &[id]::after {
-          @apply px-1 text-sm cursor-pointer text-zinc-400 dark:text-zinc-500;
-          content: "¶";
-        }
       }
 
       /* Blockquotes, Admonitions */
       blockquote {
-        @apply block-component;
-
         @apply pl-4 py-2 my-4 border-l-4 border-zinc-300 dark:border-zinc-700;
 
         p {
@@ -67,16 +58,26 @@
 
       /* Expendables */
       details {
-        @apply block-component;
+        @apply w-full overflow-clip rounded-2xl border border-zinc-300 dark:border-zinc-700;
 
-        summary {
-          @apply cursor-pointer;
+        summary:is(:first-child) {
+          @apply cursor-pointer px-7 py-3 hover:bg-zinc-100 dark:hover:bg-zinc-900;
+
+          transition: background-color 50ms;
+
+          &::marker {
+            content: "";
+          }
+        }
+
+        &[open]::details-content {
+          @apply m-4;
         }
       }
 
       /* Codes */
       pre {
-        @apply block-component select-text overflow-x-auto;
+        @apply select-text overflow-x-auto;
 
         /* TODO: Remove this */
         *[data-temp="true"] span {
@@ -92,7 +93,7 @@
 
       /* Paragraph */
       p {
-        @apply block-component text-markdown;
+        @apply text-markdown;
       }
 
       /* Lists */
@@ -122,13 +123,13 @@
       hr {
         @apply mx-2 my-4 border border-zinc-300 dark:border-zinc-700;
       }
-    }
-  }
-}
 
-@utility block-component {
-  & + & {
-    @apply mt-4;
+      hgroup, blockqoute, details, pre, p, ul, ol, dl {
+        & + & {
+          @apply mt-4;
+        }
+      }
+    }
   }
 }
 
