--- a/src/components/mdx/tables/tables.module.css
+++ b/src/components/mdx/tables/tables.module.css
@@ -39,6 +39,12 @@
         }
       }
     }
+
+    &[data-align="center"] {
+      tbody > tr > td {
+        @apply text-center;
+      }
+    }
   }
 }
 
